Fixed contrast on project card description

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -112,7 +112,7 @@
 	font-weight: 500;
 	font-size: 12px;
 	line-height: 20px;
-	color: var(--text-color);
+	color: var(--background);
 	margin: 0px;
 }
 
